Rename LaunchInEmulatorButtonTableCellRenderer
And the editor

Bug: Not applicable
Test: Not applicable
Change-Id: I10af7e96479ad108862ff724e9dc5c71568a2211

GitOrigin-RevId: 595290c6b9af944de77d7c05d44f9dc634eefe40